kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: food-backend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: food-backend

  template:
    metadata:
      labels:
        app: food-backend

    spec:
      containers:
        - name: backend

          image: thabith12/food-backend:v3

          imagePullPolicy: Always

          ports:
            - containerPort: 4000

          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"

            limits:
              memory: "512Mi"
              cpu: "500m"
