kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: food-frontend
  namespace: food-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: food-frontend

  template:
    metadata:
      labels:
        app: food-frontend

    spec:
      containers:
        - name: frontend

          image: thabith12/food-frontend:v4

          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 80
