kubernetes/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mongodb
  labels:
    app: mongodb

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mongodb

  template:
    metadata:
      labels:
        app: mongodb

    spec:
      containers:
        - name: mongodb

          image: mongo:7

          ports:
            - containerPort: 27017

          volumeMounts:
            - name: mongodb-storage
              mountPath: /data/db

      volumes:
        - name: mongodb-storage
          emptyDir: {}
