kubernetes/mongodb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: mongodb
  namespace: food-app

spec:
  serviceName: mongodb-service
  replicas: 1

  selector:
    matchLabels:
      app: mongodb

  template:
    metadata:
      labels:
        app: mongodb

    spec:
      containers:
      - name: mongodb
        image: mongo:7
        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 27017

        volumeMounts:
        - name: mongodb-data
          mountPath: /data/db

      volumes:
      - name: mongodb-data
        persistentVolumeClaim:
          claimName: mongodb-storage
