kubernetes/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: food-backend-service
  namespace: food-app

spec:
  selector:
    app: food-backend

  ports:
    - port: 4000
      targetPort: 4000
      nodePort: 30040

  type: NodePort
