kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: food-frontend-service
  namespace: food-app

spec:
  selector:
    app: food-frontend

  ports:
    - protocol: TCP

      port: 80

      targetPort: 80

      nodePort: 30080

  type: NodePort
