kubernetes/mongodb-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: mongodb-service
  namespace: food-app

spec:
  clusterIP: None

  selector:
    app: mongodb

  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
